[metadata]
name = nordplotlib
version = attr: nordplotlib.__version__
long_description = file: README.md
license = MIT
license_files = LICENSE

[options]
packages =
    nordplotlib
python_requires = >=3.8
install_requires =
    cycler
    matplotlib
    importlib-metadata; python_version<"3.8"

# vim: set ft=toml:
